✔ 完成Github各项支持的汉化
完成Github各项支持的汉化
删除部分无关文件

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-.github/** @andrewstech
-src-tauri/** @andrewstech
-src/** @blueedgetechno
-**/apps/**/settings*.* @yashash1511
+.github/** @inwinter04
+src-tauri/** @inwinter04
+src/** @inwinter04
+**/apps/**/settings*.* @inwinter04
