--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -16,6 +16,7 @@ jobs:
 
       - run: |
           npm ci
+          npm run crowdin init
           npm run crowdin upload
           npm run crowdin download
           npm run ghbuild
