--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "sass": "^1.68.0",
+    "tiny-pinyin": "^1.3.2",
     "translation-check": "^1.0.3"
   },
   "scripts": {
